--- a/components/Layout/_Layout/index.module.scss
+++ b/components/Layout/_Layout/index.module.scss
@@ -1,13 +1,13 @@
+@use '../../../styles/variables' as v;
+
 .container {
-  max-width: 36rem;
-  padding: 0 1rem;
-  margin: 3rem auto 6rem;
+  padding: 0 v.$padding;
 }
 
 .header {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .backToHome {
