--- a/components/Layout/_Layout/index.module.scss
+++ b/components/Layout/_Layout/index.module.scss
@@ -1,6 +1,10 @@
 @use '../../../styles/variables' as v;
 
 .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
   padding: 0 v.$padding;
 }
 
