--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -19,27 +19,28 @@ $h6-font-size: 12px;
 $h6-line-height: 1.5;
 
 @mixin heading-style($heading-font-size, $heading-line-height) {
-    font-size: $heading-font-size;
-    font-family: v.$heading-font-family;
-    line-height: $heading-line-height;
-    letter-spacing: 1px;
-    color: v.$heading-font-color;
+  color: v.$heading-font-color;
+  font-size: $heading-font-size;
+  font-family: v.$heading-font-family;
+  line-height: $heading-line-height;
+  letter-spacing: 1px;
+  margin: 0 0 30px 0;
 }
 
 @mixin link-style() {
-    font-family: v.$base-font-family;
-    letter-spacing: 0.155em;
-    text-transform: uppercase;
-    font-weight: v.$bold;
+  font-family: v.$base-font-family;
+  letter-spacing: 0.155em;
+  text-transform: uppercase;
+  font-weight: v.$bold;
 }
 
 @mixin uppercase-style() {
-    border: none;
-    font-size: 10px;
-    font-family: v.$base-font-family;
-    line-height: 1.2;
-    text-transform: uppercase;
-    letter-spacing: 2.4px;
+  border: none;
+  font-size: 10px;
+  font-family: v.$base-font-family;
+  line-height: 1.2;
+  text-transform: uppercase;
+  letter-spacing: 2.4px;
 }
 
 .h1,
@@ -48,48 +49,44 @@ $h6-line-height: 1.5;
 .h4,
 .h5,
 .h6 {
-    margin: 0 0 30px 0;
-	&.underline {
-		display: inline-block;
-		border-bottom: 2px solid #FFFFFF;
-    }
-    .intro & {
-        margin-bottom: 10px;
-    }
-}
+  &.underline {
+    display: inline-block;
+    border-bottom: 2px solid #ffffff;
+  }
 
-.h1 {
-    @include heading-style($h1-font-size, $h1-line-height);
-    font-weight: v.$heading-font-weight;
-}
-
-.h2 {
-    @include heading-style($h2-font-size, $h2-line-height);
+  .intro & {
     margin-bottom: 10px;
-    font-weight: 400;
-    color: v.$base-font-color;
+  }
 }
 
-.h3 {
-    @include heading-style($h3-font-size, $h3-line-height);
-    font-weight: v.$heading-font-weight;
+@mixin h1 {
+  @include heading-style($h1-font-size, $h1-line-height);
+  font-weight: v.$heading-font-weight;
 }
 
-.h4 {
-    @include uppercase-style();
-    font-weight: 400;
+@mixin h2 {
+  @include heading-style($h2-font-size, $h2-line-height);
+  margin-bottom: 10px;
+  font-weight: 400;
+  color: v.$base-font-color;
 }
 
-.h5 {
-    @include heading-style($h5-font-size, $h5-line-height);
-    font-weight: v.$heading-font-weight;
+@mixin h3 {
+  @include heading-style($h3-font-size, $h3-line-height);
+  font-weight: v.$heading-font-weight;
 }
 
-.h6 {
-    @include heading-style($h6-font-size, $h6-line-height);
-    font-weight: v.$heading-font-weight;
+@mixin h4 {
+  @include uppercase-style();
+  font-weight: 400;
 }
 
+@mixin h5 {
+  @include heading-style($h5-font-size, $h5-line-height);
+  font-weight: v.$heading-font-weight;
+}
 
-
-
+@mixin h6 {
+  @include heading-style($h6-font-size, $h6-line-height);
+  font-weight: v.$heading-font-weight;
+}
