--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -79,11 +79,13 @@
 
 @mixin site-padding {
   @include breakpoint-max(v.$md) {
-    padding: 15px v.$mobile-padding;
+    padding-right: v.$mobile-padding;
+    padding-left: v.$mobile-padding;
   }
 
   @include breakpoint(v.$md) {
-    padding: 15px v.$padding;
+    padding-right: v.$padding;
+    padding-left: v.$padding;
   }
 }
 
