--- a/components/Templates/Post/index.module.scss
+++ b/components/Templates/Post/index.module.scss
@@ -18,7 +18,8 @@
 .blog {
   display: grid;
   gap: v.$padding;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 300px 700px;
+  justify-content: space-evenly;
 
   // h1 {
   //   @include t.h1;
