adding social links to blog sidebar

--- a/components/Templates/Post/index.module.scss
+++ b/components/Templates/Post/index.module.scss
@@ -123,3 +123,11 @@
   padding-bottom: 100%;
   position: relative;
 }
+
+.social li {
+  display: inline-block;
+
+  a {
+    padding: 0 8px;
+  }
+}
